Enable installation and usage of new client files-api-sdk
